spring-boot/src/main/java/com/hotels/example/errors/RoomIsBookedException.java
package com.hotels.example.errors;

public class RoomIsBookedException  extends  RuntimeException{

    public RoomIsBookedException(String message){
        super(message);
    }
}
